2003-04-04  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* coff/tic4x.h: Namespace cleanup. Replace s/c4x/tic4x
	and s/c3x/tic3x/
	* coff/tc-tic4x.h: Ditto
	* opcode/tic4x.h: Ditto

2003-04-02  Bob Wilson  <bob.wilson@acm.org>

	* xtensa-config.h: Remove comment indicating that this is a
	generated file.

2003-04-01  Bob Wilson  <bob.wilson@acm.org>

        * dis-asm.h (print_insn_xtensa): Declare.
        * xtensa-config.h: New file.
        * xtensa-isa-internal.h: Likewise.
        * xtensa-isa.h: Likewise.

2003-03-17  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* ansidecl.h (ATTRIBUTE_NONNULL, ATTRIBUTE_NULL_PRINTF,
	ATTRIBUTE_NULL_PRINTF_1, ATTRIBUTE_NULL_PRINTF_2,
	ATTRIBUTE_NULL_PRINTF_3, ATTRIBUTE_NULL_PRINTF_4,
	ATTRIBUTE_NULL_PRINTF_5): New.
	(ATTRIBUTE_PRINTF): Add ATTRIBUTE_NONNULL.

2003-03-17  Jan Hubicka  <jh@suse.cz>

	* hashtab.h (htab_traverse_noresize): Declare.

2003-02-27  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* libiberty.h: Document return value of physmem routines.

2003-02-20  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* libiberty.h (physmem_total, physmem_available): Prototype.

2003-02-20  Daniel Jacobowitz  <drow@mvista.com>

	* libiberty.h (lrealpath): Add declaration.

2003-01-31  Grant Grundler  <grundler@dsl2.external.hp.com>

        * hppa.h (ldwa, ldda): Add ordered opcodes.

2003-01-26  Daniel Jacobowitz  <drow@mvista.com>

	* hashtab.h (htab_alloc_with_arg, htab_free_with_arg): Add new types.
	(struct htab): Add alloc_arg, alloc_with_arg_f, free_with_arg_f.
	(htab_create_alloc_ex): New prototype.
	(htab_set_functions_ex): New prototype.

2003-01-25  Jakub Jelinek  <jakub@redhat.com>

	* elf/sparc.h: Add TLS relocs.  Move R_SPARC_REV32 to 252.

2003-01-20  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* coff/tic4x.h (TICOFF_TARGET_MACHINE_GET): Fixed define bug
	* coff/ti.h (TICOFF_TARGET_MACHINE_GET): Added macros

2002-07-17  Geoffrey Keating  <geoffk@redhat.com>

	* splay-tree.h (GTY): Define if undefined.