@@ -1,3 +1,11 @@
+2003-04-23  H.J. Lu <hjl@gnu.org>
+
+	* ldmain.c (link_callbacks): Initialize error_handler.
+
+	* ldmisc.c (error_handler): New function.
+
+	* ldmisc.h (error_handler): New prototype.
+
 2003-04-21  Stephane Carrez  <stcarrez@nerim.fr>
 
 	* emulparams/m68hc11elf.sh: Use m68hc1xelf.em extra.
